# InsightHub

./: .gitignore  .pre-commit-config.yaml  .prettierrc.json  CREDITS.txt  Pipfile  README.md  activate_venv.sh  backend_server.py  dev_startup.sh  docker-compose-absclust.yaml  docker-compose-at.yaml  docker-compose-showcase.yaml  docker-compose-small-server.yaml  docker-compose-staging.yaml  docker-compose.override.dev.yaml  docker-compose.override.gpu.yaml  docker-compose.override.gpu_template.yaml  docker-compose.override.pdferret.yaml  docker-compose.yaml  example_tsense.ipynb  fix-python-install.sh  get_pubmed_bert_embedding.py  index.html  index_abstracts.py  ionos_test.sh  logic.js  mistral_test.sh  model_server.py  pyproject.toml  required_environment_variables.txt  requirements_backend.py  requirements_backend.txt  todo.txt  ui_dependencies_model.txt  update_server_instructions.md  upload_to_weaviate.py  vsc-extensions.txt
.github/workflows/: main.yml
backend/: backend_server.py  backend_server_absclust.py  manage.py  model_server.py
backend/columns/: prompts.py  schemas.py  views.py
backend/config/: embeddings.py  llm.py  utils.py
backend/data_map_backend/: admin.py  apps.py  chatgpt_client.py  data_backend_client.py  groq_client.py  import_export.py  models.py  monitoring.py  notifier.py  prompts.py  schemas.py  serializers.py  urls.py  utils.py
backend/database_client/: django_client.py  object_storage_client.py  pubmed_data.py  text_search_engine_client.py  vector_search_engine_client.py  weaviate_database_client.py
backend/filter/: schemas.py  views.py
backend/ingest/: apps.py  prompts.py  schemas.py  views.py
backend/legacy_backend/: apps.py  backend_server.py  urls.py
backend/logic/: add_vectors.py  extract_pipeline.py  generator_functions.py  insert_logic.py  mapping_task.py  model_client.py  postprocess_search_results.py
backend/map/: logic.py  schemas.py  views.py
backend/preparation/: create_columns.py  logic.py  prompts.py  schemas.py  views.py
backend/project_base/: asgi.py  middleware.py  settings.py  urls.py  views.py  wsgi.py
backend/search/: logic.py  prompts.py  schemas.py  views.py
backend/test/: test_django_backend.py
backend/utils/: absclust_client.py  cluster_title.py  dotdict.py  gensim_w2v_vectorizer.py  helpers.py  model_client.py  postprocess_search_results.py  regex_tokenizer.py  spacy_tokenizer.py  tokenizer.py
backend/workflows/: agents.py  create_columns.py  dspy_models.py  logic.py  prompts.py  schemas.py  views.py
backend/write/: prompts.py  schemas.py  views.py
data_backend/: backend_server.py
data_backend/api_clients/: bing_web_search.py  cohere_reranking.py  deepinfra_client.py  old_absclust_database_client.py  openalex_api.py
data_backend/database_client/: absclust_database_client.py  django_client.py  forward_local_db.py  object_storage_client.py  remote_instance_client.py  text_search_engine_client.py  vector_search_engine_client.py
data_backend/logic/: add_vectors.py  autocut.py  chat_and_extraction.py  chat_and_extraction_common.py  chunking.py  classifiers.py  clusters_and_titles.py  export_converters.py  extract_pipeline.py  generate_missing_values.py  generator_functions.py  insert_logic.py  local_map_cache.py  mapping_task.py  model_client.py  reranking.py  search.py  search_common.py  thumbnail_atlas.py  upload_files.py
data_backend/pdfparser/: base_parser.py  grobid_parser.py
data_backend/test/: import_openalex.py  test_django_backend.py
data_backend/utils/: custom_json_encoder.py  field_types.py  helpers.py  regex_tokenizer.py  source_plugin_types.py
django_backend/: start_server.sh
django_backend/data_map_backend/: admin.py  apps.py  models.py  urls.py  views.py
django_backend/project_base/: settings.py  urls.py
docker/: backend.Dockerfile  backend.gpu.Dockerfile  backend_dev.Dockerfile  data_backend.Dockerfile  data_backend.gpu.Dockerfile  docker_container_base_python_packages.txt  gpu_utility_server.Dockerfile  gpu_utility_server_requirements.txt  model_server.Dockerfile  model_server_requirements.txt  organization_backend.Dockerfile  organization_backend.gpu.Dockerfile  webserver.Dockerfile  webserver_dev.Dockerfile  webserver_prod.Dockerfile
docker/resources/: german_synonym.txt
docs/: mkdocs.yml  requirements.txt
docs/docs/: .nav.yml  index.md
evaluation/: cookies.pkl  run_evaluation.ipynb
evaluation/quiddity_client/: __main__.py  client.py  models.py  utils.py
evaluation/quiddity_evaluate/: adversarial_datagen.py  config.py  data_models.py  evaluate.py  (+3 more)
frontend/: .dockerignore  embed.html  embedded_map.html  external_search_example.html  index.html  jsconfig.json  package-lock.json  package.json  start_server.sh  tailwind.config.js  vite.config.js
gpu_utility_server/: gpu_utility_server.py
instructions/: create_new_staging_environment.md  update_server_instructions.md
landing_page/: for_any_data.html  for_content.html  for_products.html  index.html
model_server/: model_server.py
old_frontend/: logic.js
organization_backend/: export_and_import_database.txt  import_database_in_fresh_system.txt
quiddity_client/: client.py  models.py  utils.py
scripts_and_examples/: download_semantic_scholar_dataset.py  download_sematic_scholar_dataset.py  fix_opensearch_low_disk_issues.txt  get_pubmed_bert_embedding.py  index_abstracts.py  ranking_settings_example.json  save_queries_as_csv.py  sgb_as_csv.csv  test_cli.py  test_unpaywall.py  upload_to_weaviate.py
systemd_services/: absclust-dev.service  absclust-prod.service  absclust-staging.service  autossh-absclust-55440.service  autossh-absclust-55441.service  autossh-dozzle-9998.service  dozzle-log-server.service  pdferret.service
webgl_examples/: kickjs project v2.txt  kickjs project.txt
(+623 files in other folders)
