[tool.poetry]
name = "visual-data-map"
version = "0.1.0"
description = ""
authors = ["Tim Henning <tim@luminosuslight.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.0,<3.12"
#ocrmypdf = "*"
#pypdf = "*"
#unstructured = {extras = ["pdf"], version = "*"}
beautifulsoup4 = "*"
cachetools = "*"
cbor2 = "*"
cohere = "*"
cuml-cu12 = {version = "24.6.*", source = "nvidia"}
diskcache = "*"
django = "*"
django_ninja = "*"
django-cors-headers = "*"
django-extensions = "*"
django-filter = "*"
django-import-export = "*"
django-jazzmin = "*"
django-jsonsuit = "*"
django-object-actions = "*"
django-prometheus = "*"
django-simple-history = "*"
djangoql = "*"
djangorestframework = "*"
drf-social-oauth2 = "*"
gensim = "*"
groq = "*"
hdbscan = "*"
kolo = "*"
lingua-language-detector = "*"
markdown = "*"
nltk = "*"
openai = "*"
opensearch-py = "*"
orjson = "*"
pandas = "*"
pdferret = {git = "https://trel725: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@github.com/Trel725/pdferret.git"}
pillow = "*"
psycopg2-binary = "*"
pypdfium2 = "*"
pyspellchecker = "*"
qdrant-client = "*"
ratelimit = "*"
scikit-learn = "*"
scipdf = {git = "https://github.com/Trel725/scipdf_parser"}
scipy = "==1.10.1"
sentence-transformers = "*"
social-auth-app-django = "*"
torch = "*"
transformers = "*"
umap-learn = {git = "https://github.com/luminosuslight/umap_with_progress_callback.git"}
werkzeug = "*"


[tool.poetry.group.dev.dependencies]
viztracer = "*"
spacy = "*"

[[tool.poetry.source]]
name = "pypi"
priority = "primary"

[[tool.poetry.source]]
name = "nvidia"
url = "https://pypi.nvidia.com"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
