[tool.pdm.build]
includes = []

[[tool.pdm.source]]
name = "pypi"
url = ""
verify_ssl = false

[[tool.pdm.source]]
name = "nvidia"
url = "https://pypi.nvidia.com"
verify_ssl = true
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.black]

[project]
authors = [
    {name = "Tim Henning", email = "tim@luminosuslight.de"},
]
requires-python = "<3.12,<4.0.0,>=3.11.0"
dependencies = [
    "beautifulsoup4",
    "cachetools",
    "cbor2",
    "cohere",
    "diskcache",
    "django",
    "django-ninja",
    "django-cors-headers",
    "django-extensions",
    "django-filter",
    "django-import-export",
    "django-jazzmin",
    "django-svelte-jsoneditor",
    "django-object-actions",
    "django-prometheus",
    "django-simple-history",
    "djangoql",
    "djangorestframework",
    "drf-social-oauth2",
    "gensim",
    "groq",
    "hdbscan",
    "kolo",
    "llmonkey @ git+https://trel725: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@github.com/Trel725/LLMonkey.git",
    "lingua-language-detector",
    "markdown",
    "nltk",
    "openai",
    "opensearch-py",
    "orjson",
    "pandas",
    "pdferret @ git+https://trel725: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@github.com/Trel725/pdferret.git",
    "pillow",
    "psycopg2-binary",
    "pypdfium2",
    "pyspellchecker",
    "qdrant-client",
    "ratelimit",
    "scikit-learn",
    "scipdf @ git+https://github.com/Trel725/scipdf_parser",
    "scipy==1.10.1",
    "sentence-transformers",
    "social-auth-app-django",
    "torch",
    "transformers",
    "umap-learn @ git+https://github.com/luminosuslight/umap_with_progress_callback.git",
    "werkzeug",
]
name = "visual-data-map"
version = "0.1.0"
description = ""
readme = "README.md"

[project.optional-dependencies]
debug = ["debugpy"]
#gpu = ["cuml-cu12==24.6.*",]

[dependency-groups]
dev = [
    "viztracer",
    "spacy",
]
