[tool.pdm.build]
includes = []

[[tool.pdm.source]]
name = "pypi"
url = ""
verify_ssl = false

[[tool.pdm.source]]
name = "nvidia"
url = "https://pypi.nvidia.com"
verify_ssl = true

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.black]
line-length = 119
target-version = ['py311']
extend-exclude = '''
    .*/migrations/0[0-9]{3}_.+\.py
'''

[tool.isort]
src_paths = ["backend", "scripts_and_examples/import_scripts"]
profile = "black"

[project]
authors = [
    {name = "Tim Henning", email = "tim@luminosuslight.de"},
]
requires-python = "<3.12,<4.0.0,>=3.11.0"
dependencies = [
    "beautifulsoup4",
    "cachetools",
    "cbor2",
    "cohere",
    "diskcache",
    "django",
    "django-ninja",
    "django-cors-headers",
    "django-extensions",
    "django-filter",
    "django-import-export",
    "django-jazzmin",
    "django-svelte-jsoneditor",
    "django-object-actions",
    "django-prometheus",
    "django-simple-history",
    "djangoql",
    "djangorestframework",
    "drf-social-oauth2",
    "hdbscan",
    "llmonkey @ git+https://trel725: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@github.com/Trel725/LLMonkey.git",
    "markdown",
    "opensearch-py",
    "orjson",
    "pillow",
    "psycopg2-binary",
    "python-box",
    "qdrant-client",
    "ratelimit",
    "scikit-learn",
    "social-auth-app-django",
    "umap-learn @ git+https://github.com/luminosuslight/umap_with_progress_callback.git",
    "werkzeug",
    "numpy<2.0",
    "dspy",
]
name = "visual-data-map"
version = "0.1.0"
description = ""
readme = "README.md"

[project.optional-dependencies]
debug = ["debugpy"]
#gpu = ["cuml-cu12==24.6.*",]  # needed for GPU based UMAP, or pip install --extra-index-url=https://pypi.nvidia.com "cuml-cu12==24.12.*"

[dependency-groups]
dev = [
    "viztracer",
    "spacy",
    "kolo",
]
